# firebase-database

./: .gitignore  ChangeLog.md  LICENSE  default.nix  firebase-collegevine.nix  firebase.cabal  firebase.nix  nano-http.nix  shell.nix  tests.tix
benchmark/: Bench.hs  MainBench.hs
src/: Firebase.hs  FirebaseEvents.hs  FirebaseTypes.hs  Log.hs  Security.hs  Settings.hs  Util.hs
src/Network/Google/: Firebase.hs
src/Network/Google/Firebase/: Events.hs  Security.hs  Settings.hs  Types.hs  Util.hs
static/: index.html
test/: EventsSpec.hs  FirebaseEventsSpec.hs  FirebaseSpec.hs  HPC.hs  TestData.hs  TestSettings.hs
