name:                firebase 
version:             0.0.1
synopsis:            Google Firebase Database API
homepage:            https://github.com/nghamilton/firebase 
license:             BSD3
license-file:        LICENSE
author:              Nick Hamilton
maintainer:          projects@nickhamilton.ninja 
category:            Web 
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  default-extensions:  OverloadedStrings
                     , DuplicateRecordFields
  other-modules:       Network.Google.Firebase,Network.Google.Firebase.Util,Network.Google.Firebase.Events,Network.Google.Firebase.Types
  ghc-options:         -Wall
  build-depends:       base >=4.8 && <5
                     , hspec >= 1.8
                     , QuickCheck
                     , generic-random
                     , http-streams >= 0.8.5.3
                     , io-streams >= 1.4.0.0 && < 1.5
                     , http-client
                     , http-client-tls
                     , HsOpenSSL
                     , http-types
                     , aeson
                     , attoparsec
                     , text
                     , bytestring
                     , string-conversions
                     , unordered-containers
                     , lens
                     , mtl
                     , nano-http
                     , time
                     , split
  hs-source-dirs:      src,test
  default-language:    Haskell2010

test-suite tests
  default-extensions:  OverloadedStrings
                     , DuplicateRecordFields
  ghc-options:         -fhpc
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      src,test
  other-modules:       MainSpec 
  build-depends:       base >= 4.8 && < 5
                     , hspec >= 1.8
                     , QuickCheck
                     , generic-random
                     , http-client
                     , http-client-tls
                     , HsOpenSSL
                     , SHA
                     , uuid
                     , hashids
                     , http-types
                     , aeson
                     , attoparsec
                     , unordered-containers
                     , directory
                     , text
                     , bytestring
                     , text-show
                     , string-conversions
                     , lens
                     , mtl
                     , nano-http
                     , time 
                     , data-default
                     , MissingH
                     , split
                     , safe
                     , either
  default-language:    Haskell2010

benchmark criterion
  default-extensions:  OverloadedStrings
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  hs-source-dirs:      src,test,benchmark
  build-depends:       base >= 4.8 && < 5
                     , criterion
  default-language:    Haskell2010
