name:                firebase 
version:             0.0.1
synopsis:            Google Firebase Database API
homepage:            https://github.com/nghamilton/firebase 
license:             BSD3
license-file:        LICENSE
author:              Nick Hamilton
maintainer:          projects@nickhamilton.ninja 
category:            Web 
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  default-extensions:  OverloadedStrings
                     , DuplicateRecordFields
  exposed-modules:     Network.Google.Firebase,Network.Google.Firebase.Events
  other-modules:       Network.Google.Firebase.Util,Network.Google.Firebase.Types
  ghc-options:         -Wall
  build-depends:       base >=4.8 && <5
                     , hspec >= 1.8
                     , QuickCheck
                     , http-streams >= 0.8.5.3
                     , io-streams >= 1.4.0.0 && < 1.5
                     , http-client
                     , http-client-tls
                     , HsOpenSSL
                     , http-types
                     , aeson
                     , attoparsec
                     , text
                     , bytestring
                     , string-conversions
                     , unordered-containers
                     , lens
                     , mtl
                     , nano-http
                     , split
  hs-source-dirs:      src,test
  default-language:    Haskell2010

test-suite tests
  default-extensions:  OverloadedStrings
                     , DuplicateRecordFields
  ghc-options:         -fhpc
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      src,test
  other-modules:       
  build-depends:       base >= 4.8 && < 5
                     , hspec >= 1.8
                     , QuickCheck
                     , generic-random
                     , hspec >= 1.8
                     , QuickCheck
                     , http-streams >= 0.8.5.3
                     , io-streams >= 1.4.0.0 && < 1.5
                     , http-client
                     , http-client-tls
                     , HsOpenSSL
                     , http-types
                     , aeson
                     , attoparsec
                     , text
                     , bytestring
                     , string-conversions
                     , unordered-containers
                     , lens
                     , mtl
                     , nano-http
                     , split
  default-language:    Haskell2010

benchmark criterion
  default-extensions:  OverloadedStrings
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  hs-source-dirs:      src,test,benchmark
  build-depends:       base >= 4.8 && < 5
                     , criterion
  default-language:    Haskell2010
